force-app/main/default/objects/CampaignMember/fields/Additional_Staff_Hired__c.field-meta.xml
<CustomField>
    <fullName>Additional_Staff_Hired__c</fullName>
    <label>Additional Staff Hired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>