force-app/main/default/objects/CampaignMember/fields/Assistance_Request__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Request__c</fullName>
    <label>Assistance Request</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Planning</fullName>
            </value>
            <value>
                <fullName>Business Registration</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
            <value>
                <fullName>Financials/Accounting</fullName>
            </value>
            <value>
                <fullName>Government Information</fullName>
            </value>
            <value>
                <fullName>Import / Export</fullName>
            </value>
            <value>
                <fullName>Intellectual Property</fullName>
            </value>
            <value>
                <fullName>Market Research</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Mentoring</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Startup - General Info</fullName>
            </value>
            <value>
                <fullName>Legal - General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>