force-app/main/default/objects/CampaignMember/fields/Business_Outcome_Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Business_Outcome_Survey_Status__c</fullName>
    <label>Business Outcome Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>