force-app/main/default/objects/CampaignMember/fields/Direct_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Direct_Account_ID__c</fullName>
    <formula>Contact.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Account ID</label>
    <type>Text</type>
</CustomField>