force-app/main/default/objects/CampaignMember/fields/Export_Markets__c.field-meta.xml
<CustomField>
    <fullName>Export_Markets__c</fullName>
    <label>Export Markets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA/NAFTA</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>