force-app/main/default/objects/CampaignMember/fields/Forwards__c.field-meta.xml
<CustomField>
    <fullName>Forwards__c</fullName>
    <description>Forwards</description>
    <label>Forwards</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>