force-app/main/default/objects/CampaignMember/fields/Hired_Additional_Staff__c.field-meta.xml
<CustomField>
    <fullName>Hired_Additional_Staff__c</fullName>
    <label>Hired Additional Staff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>