force-app/main/default/objects/CampaignMember/fields/Increased_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Increased_Revenue__c</fullName>
    <label>Increased Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>