force-app/main/default/objects/CampaignMember/fields/Increased_Value_of_Export_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Increased_Value_of_Export_Revenue__c</fullName>
    <label>Increased Value of Export Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>