force-app/main/default/objects/CampaignMember/fields/Initial_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Survey_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to indicated whether initial survey sent out after 6 months has been completed or not.</description>
    <inlineHelpText>This field is to indicated whether initial survey sent out after 6 months has been completed or not.</inlineHelpText>
    <label>Initial Survey Completed</label>
    <type>Checkbox</type>
</CustomField>