force-app/main/default/objects/CampaignMember/fields/Initial_Survey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Initial_Survey_Stage__c</fullName>
    <description>This field is to track the various stages of Business Outcome surveys sent after 6 Months.</description>
    <inlineHelpText>This field is to track the various stages of Business Outcome surveys sent after 6 Months.</inlineHelpText>
    <label>Initial Survey Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>