force-app/main/default/objects/CampaignMember/fields/Initiative_Status__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Status__c</fullName>
    <description>This field is referred in trigger Logic to map the value from its parent Initiative and will not be exposed on UI</description>
    <label>Initiative Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>