force-app/main/default/objects/CampaignMember/fields/International_Deals_Secured__c.field-meta.xml
<CustomField>
    <fullName>International_Deals_Secured__c</fullName>
    <label>International Deals Secured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>