force-app/main/default/objects/CampaignMember/fields/Member_Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Member_Integration_Source__c</fullName>
    <defaultValue>&quot;Salesforce&quot;</defaultValue>
    <description>This Field will be populated based on how the record has been created i.e. through Form Assembly, Workato or manually in salesforce</description>
    <inlineHelpText>This Field will be populated based on how the record has been created i.e. through Form Assembly, Workato or manually in salesforce</inlineHelpText>
    <label>Member Integration Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>