force-app/main/default/objects/CampaignMember/fields/Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Member_Role__c</fullName>
    <inlineHelpText>Int-Team Memb-CoT staff
Ext-Team Memb-Ext Org
Srvcs Provider- Hired to assist
Attendee-Registers for the event
Invs, Target-Investment attraction project
BIA Member 
Bus Community Member - Part of the project
Dlgte Inb -Dlgte from inb miss</inlineHelpText>
    <label>Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External - Team Member</fullName>
            </value>
            <value>
                <fullName>Internal - Team Member</fullName>
            </value>
            <value>
                <fullName>Stakeholder - Attendee</fullName>
            </value>
            <value>
                <fullName>Stakeholder - BIA Member</fullName>
            </value>
            <value>
                <fullName>Stakeholder - Business Community</fullName>
            </value>
            <value>
                <fullName>Stakeholder - Delegate (Inbound)</fullName>
            </value>
            <value>
                <fullName>Stakeholder - Delegate (Outbound)</fullName>
            </value>
            <value>
                <fullName>Stakeholder - Investment Target</fullName>
            </value>
            <value>
                <fullName>Stakeholder - Service Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>