force-app/main/default/objects/CampaignMember/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Support</fullName>
            </value>
            <value>
                <fullName>Networking Events</fullName>
            </value>
            <value>
                <fullName>Business Training</fullName>
            </value>
            <value>
                <fullName>General Projects</fullName>
            </value>
            <value>
                <fullName>International Project</fullName>
            </value>
            <value>
                <fullName>Investment Activity</fullName>
            </value>
            <value>
                <fullName>Advisory Group (Formal)</fullName>
            </value>
            <value>
                <fullName>Distribution List (Informal)</fullName>
            </value>
            <value>
                <fullName>Project Support (BIA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>