force-app/main/default/objects/CampaignMember/fields/Member_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Member_Type_Formula__c</fullName>
    <description>This field value corresponds to Event Type/Project Type/Group Management Type based on Initiative Record Type</description>
    <formula>IF(AND(NOT(ISBLANK(TEXT(Campaign.Event_Type__c))),Campaign.RecordType.Name=&#39;Events&#39;),TEXT(Campaign.Event_Type__c),IF(AND(NOT(ISBLANK(TEXT(Campaign.Project_Type__c))),Campaign.RecordType.Name=&#39;Projects&#39;),TEXT(Campaign.Project_Type__c),IF(AND(NOT(ISBLANK(TEXT(Campaign.Group_Management_Type__c))),Campaign.RecordType.Name=&#39;Group_Management&#39;),TEXT(Campaign.Group_Management_Type__c),IF(Campaign.RecordType.Name=&#39;Investment_Activity&#39;,&#39;Investment Activity&#39;,null))))</formula>
    <inlineHelpText>This field value corresponds to Event Type/Project Type/Group Management Type based on Initiative Record Type</inlineHelpText>
    <label>Member Type</label>
    <type>Text</type>
</CustomField>