force-app/main/default/objects/CampaignMember/fields/Mission_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Mission_Feedback__c</fullName>
    <label>Mission Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>