force-app/main/default/objects/CampaignMember/fields/Mission_Feedback_Communications__c.field-meta.xml
<CustomField>
    <fullName>Mission_Feedback_Communications__c</fullName>
    <label>Mission - Feedback - Communications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>