force-app/main/default/objects/CampaignMember/fields/Related_Contact_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_Account_Type__c</fullName>
    <description>This Field is used to capture Account Type value on Account records related to Contact on Initiative Member and the value will be used in workflow logic to send Client Satisfaction and Business Outcome Survey to Client</description>
    <formula>TEXT(Contact.Account.Account_Type__c)</formula>
    <inlineHelpText>This Field is used to capture Account Type value on Account records related to Contact on Initiative Member and the value will be used in workflow logic to send Client Satisfaction and Business Outcome Survey to Client</inlineHelpText>
    <label>Related Contact Account Type</label>
    <type>Text</type>
</CustomField>