force-app/main/default/objects/CampaignMember/fields/Survey_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Start_Date__c</fullName>
    <label>Survey Start Date</label>
    <type>Date</type>
</CustomField>