force-app/main/default/objects/CampaignMember/fields/Training_Attendance_Before__c.field-meta.xml
<CustomField>
    <fullName>Training_Attendance_Before__c</fullName>
    <label>Training - Attendance Before</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>