force-app/main/default/objects/CampaignMember/fields/Training_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Training_Feedback__c</fullName>
    <label>Training - Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>