force-app/main/default/objects/CampaignMember/fields/Training_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Training_Recommended__c</fullName>
    <label>Training - Recommended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>