force-app/main/default/objects/CampaignMember/fields/Training_Value_for_Money__c.field-meta.xml
<CustomField>
    <fullName>Training_Value_for_Money__c</fullName>
    <label>Training - Value for Money</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Great Deal of Value</fullName>
            </value>
            <value>
                <fullName>A Lot of Value</fullName>
            </value>
            <value>
                <fullName>A Moderate Level of Value</fullName>
            </value>
            <value>
                <fullName>Little Value</fullName>
            </value>
            <value>
                <fullName>No Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>