force-app/main/default/objects/CampaignMember/fields/Unsubscribe_from_Follow_Up_Emails__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_from_Follow_Up_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to identify if any further follow emails should be sent or not based on user preference provided.</description>
    <inlineHelpText>This field will be used to identify if any further follow emails should be sent or not based on user preference provided.</inlineHelpText>
    <label>Unsubscribe from Follow Up Emails</label>
    <type>Checkbox</type>
</CustomField>