force-app/main/default/objects/CampaignMember/fields/X1_Year_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>X1_Year_Survey_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to indicated whether 1 year survey has been completed or not.</description>
    <inlineHelpText>This field is to indicated whether 1 year survey has been completed or not.</inlineHelpText>
    <label>1 Year Survey Completed</label>
    <type>Checkbox</type>
</CustomField>