force-app/main/default/objects/CampaignMember/recordTypes/Business_Training_Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>Business_Training_Campaign_Member</fullName>
    <active>true</active>
    <description>This Program Member Type should be selected for Event Program Record Type</description>
    <label>Business Training Program Member</label>
</RecordType>