force-app/main/default/objects/CampaignMember/recordTypes/International_Program_Member.recordType-meta.xml
<RecordType>
    <fullName>International_Program_Member</fullName>
    <active>true</active>
    <description>This Program Member Type should be selected for Event Program Record Type and applicable to International Business</description>
    <label>International Program Member</label>
</RecordType>