force-app/main/default/objects/CampaignMember/recordTypes/Master_Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>Master_Campaign_Member</fullName>
    <active>true</active>
    <description>This Program Member Type is default and applicable to all other Program Record Type</description>
    <label>Master Program Member</label>
</RecordType>