force-app/main/default/objects/CampaignMember/recordTypes/Mission_Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>Mission_Campaign_Member</fullName>
    <active>true</active>
    <description>This Program Member Type should be selected for Project Program Record Type</description>
    <label>Mission Program Member</label>
</RecordType>